--- a/LR.bib
+++ b/LR.bib
@@ -374,14 +374,6 @@ publisher = {ACM},
 title = {{Vio: a mixed-initiative approach to learning and automating procedural update tasks}},
 year = {2007}
 }
-@article{Wattegama2012,
-author = {Wattegama, Chanuka},
-file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Wattegama - 2012 - ICT for disaster management.pdf:pdf},
-isbn = {9789748283944},
-journal = {Information Economy, Society and Polity},
-title = {{ICT for disaster management}},
-year = {2012}
-}
 @article{Abbott1994a,
 author = {Abbott, KR and Sarin, SK},
 file = {:Users/wxj/Desktop/download (1).pdf:pdf},
@@ -440,7 +432,7 @@ url = {http://link.springer.com/article/10.1007/BF00752451},
 volume = {1},
 year = {1992}
 }
-@misc{IntergraphCorporation2000,
+@techreport{IntergraphCorporation2000,
 author = {{Intergraph Corporation}},
 title = {{Intergraph MGE GIS}},
 url = {http://www.intergraph.com/},
@@ -480,15 +472,6 @@ keywords = {disaster response,human and agents,innovative applications},
 title = {{HAC-ER: A disaster response system based on human-agent collectives}},
 url = {http://eprints.soton.ac.uk/374070/1/fp634-ramchurn.pdf},
 year = {2015}
-}
-@inproceedings{Sarcevic2012,
-abstract = {We examine the public, social media communications of 110 emergency medical response teams and organizations in the immediate aftermath of the January 12, 2010 Haiti earthquake. We found the teams through an inductive analysis of Twitter communications acquired over the three-week emergency period from 89,114 Twitterers. We then analyzed the teams’ Twitter streams, as well as all digital media they generated and pointed to in their streams—blog posts, photographs, videos, status updates and field reports—to understand the medical coordination challenges they faced from pre-deployment readiness to on- the-ground action. Here we identify opportunities for improving coordination in a decentralized and distributed environment where staffing, disease trajectories, and other circumstances rapidly change. We extrapolate from these findings to theorize about how “beaconing” behavior is a sign of latent potential for coordination upon which mechanisms of coordination can capitalize.},
-author = {Sarcevic, Aleksandra and Palen, Leysia and White, Joanne and Starbird, Kate and Bagdouri, Mossaab and Anderson, Kenneth},
-booktitle = {Proceedings of the ACM 2012 conference on Computer Supported Cooperative Work},
-file = {:Users/wxj/Desktop/p47-sarcevic.pdf:pdf},
-pages = {47--56},
-title = {{Beacons of Hope in Decentralized Coordination: Learning from On-the-Ground Medical Twitterers During the 2010 Haiti Earthquake}},
-year = {2012}
 }
 @article{Ackerman2000,
 author = {Ackerman, Mark},
@@ -805,6 +788,26 @@ title = {{Developing a Cloud Intelligent and Energy-Saving Information Interface
 url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6185345},
 year = {2012}
 }
+@article{Boersma2009,
+author = {Boersma, Kees},
+file = {:Users/wxj/Downloads/ISCRAM2009-ERRs.pdf:pdf},
+journal = {Proceedings ISCRAM \ldots},
+keywords = {emergency response rooms,ethnographic case-study,ict systems in-use,integrated systems},
+number = {May},
+title = {{Emergency Response Rooms in Action: an ethnographic case-study in Amsterdam}},
+url = {http://www.researchgate.net/profile/Kees\_Boersma/publication/228407573\_Emergency\_response\_rooms\_in\_action\_An\_ethnographic\_case\_study\_in\_Amsterdam/links/0fcfd5146d6e3d95ea000000.pdf},
+year = {2009}
+}
+@article{Dashti2014,
+author = {Dashti, Shideh and Palen, Leysia and Heris, Mehdi P and Kenneth, M and Anderson, Scott and Anderson, T Jennings},
+file = {:Users/wxj/Downloads/DashtiPalenetalgeoreconnaissance.pdf:pdf},
+journal = {Information Systems for Crisis Response and Management (2014)},
+keywords = {colorado floods,crisis informatics,engineering reconnaissance,extreme events,infrastructure performance,situational awareness,social media},
+number = {May},
+title = {{Supporting Disaster Reconnaissance with Social Media Data: A Design-Oriented Case Study of the 2013 Colorado Floods}},
+url = {http://iscram2014.ist.psu.edu/sites/default/files/misc/proceedings/p24.pdf},
+year = {2014}
+}
 @article{Kogan2012,
 author = {Kogan, Marina and Palen, Leysia and Anderson, KM},
 file = {:Users/wxj/Downloads/CSCW-SandyRetweetPaperCR.pdf:pdf},
@@ -1014,6 +1017,25 @@ title = {{Intelligent agents as teammates}},
 url = {http://books.google.com/books?hl=en\&lr=\&id=\_Sv8yUD2hoUC\&oi=fnd\&pg=PA313\&dq=Intelligent+Agents+as+Teammates\&ots=ZUVFgZMbrU\&sig=Sow3HmZq0oowddb5k8XUhILGhkw},
 year = {2012}
 }
+@article{Palen2015,
+author = {Palen, Leysia and Soden, Robert},
+file = {:Users/wxj/Downloads/palen-soden-etal-OSM.pdf:pdf},
+isbn = {9781450331456},
+journal = {Proceedings of the 33rd \ldots},
+pages = {4113--4122},
+title = {{Success \& Scale in a Data-Producing Organization: The Socio-Technical Evolution of OpenStreetMap in Response to Humanitarian Events}},
+url = {http://dl.acm.org/citation.cfm?id=2702294},
+year = {2015}
+}
+@inproceedings{Sarcevic2012,
+abstract = {We examine the public, social media communications of 110 emergency medical response teams and organizations in the immediate aftermath of the January 12, 2010 Haiti earthquake. We found the teams through an inductive analysis of Twitter communications acquired over the three-week emergency period from 89,114 Twitterers. We then analyzed the teams’ Twitter streams, as well as all digital media they generated and pointed to in their streams—blog posts, photographs, videos, status updates and field reports—to understand the medical coordination challenges they faced from pre-deployment readiness to on- the-ground action. Here we identify opportunities for improving coordination in a decentralized and distributed environment where staffing, disease trajectories, and other circumstances rapidly change. We extrapolate from these findings to theorize about how “beaconing” behavior is a sign of latent potential for coordination upon which mechanisms of coordination can capitalize.},
+author = {Sarcevic, Aleksandra and Palen, Leysia and White, Joanne and Starbird, Kate and Bagdouri, Mossaab and Anderson, Kenneth},
+booktitle = {Proceedings of the ACM 2012 conference on Computer Supported Cooperative Work},
+file = {:Users/wxj/Desktop/p47-sarcevic.pdf:pdf},
+pages = {47--56},
+title = {{Beacons of Hope in Decentralized Coordination: Learning from On-the-Ground Medical Twitterers During the 2010 Haiti Earthquake}},
+year = {2012}
+}
 @inproceedings{Starbird2010,
 author = {Starbird, Kate and Palen, L},
 booktitle = {Information Systems for Crisis Response and Management (2010)},
@@ -1025,26 +1047,6 @@ title = {{Pass it on?: Retweeting in mass emergency}},
 url = {https://www.cs.colorado.edu/~palen/starbirdpaleniscramretweet.pdf},
 year = {2010}
 }
-@article{Palen2015,
-author = {Palen, Leysia and Soden, Robert},
-file = {:Users/wxj/Downloads/palen-soden-etal-OSM.pdf:pdf},
-isbn = {9781450331456},
-journal = {Proceedings of the 33rd \ldots},
-pages = {4113--4122},
-title = {{Success \& Scale in a Data-Producing Organization: The Socio-Technical Evolution of OpenStreetMap in Response to Humanitarian Events}},
-url = {http://dl.acm.org/citation.cfm?id=2702294},
-year = {2015}
-}
-@article{Boersma2009,
-author = {Boersma, Kees},
-file = {:Users/wxj/Downloads/ISCRAM2009-ERRs.pdf:pdf},
-journal = {Proceedings ISCRAM \ldots},
-keywords = {emergency response rooms,ethnographic case-study,ict systems in-use,integrated systems},
-number = {May},
-title = {{Emergency Response Rooms in Action: an ethnographic case-study in Amsterdam}},
-url = {http://www.researchgate.net/profile/Kees\_Boersma/publication/228407573\_Emergency\_response\_rooms\_in\_action\_An\_ethnographic\_case\_study\_in\_Amsterdam/links/0fcfd5146d6e3d95ea000000.pdf},
-year = {2009}
-}
 @article{Sutton2008,
 author = {Sutton, Jeannette and Palen, Leysia and Shklovski, Irina},
 file = {:Users/wxj/Downloads/BackchannelsISCRAM08.pdf:pdf},
@@ -1055,13 +1057,11 @@ title = {{Backchannels on the front lines: Emergent uses of social media in the 
 url = {http://www.cs.colorado.edu/~palen/Papers/iscram08/BackchannelsISCRAM08.pdf},
 year = {2008}
 }
-@article{Dashti2014,
-author = {Dashti, Shideh and Palen, Leysia and Heris, Mehdi P and Kenneth, M and Anderson, Scott and Anderson, T Jennings},
-file = {:Users/wxj/Downloads/DashtiPalenetalgeoreconnaissance.pdf:pdf},
-journal = {Information Systems for Crisis Response and Management (2014)},
-keywords = {colorado floods,crisis informatics,engineering reconnaissance,extreme events,infrastructure performance,situational awareness,social media},
-number = {May},
-title = {{Supporting Disaster Reconnaissance with Social Media Data: A Design-Oriented Case Study of the 2013 Colorado Floods}},
-url = {http://iscram2014.ist.psu.edu/sites/default/files/misc/proceedings/p24.pdf},
-year = {2014}
+@article{Wattegama2012,
+author = {Wattegama, Chanuka},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Wattegama - 2012 - ICT for disaster management.pdf:pdf},
+isbn = {9789748283944},
+journal = {Information Economy, Society and Polity},
+title = {{ICT for disaster management}},
+year = {2012}
 }
