--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -9,19 +9,19 @@
 \let\cleardoublepage\relax
 
 \chapter*{Abstract}
-This thesis contributes to the understanding of the potential socio-technical issues that might emerge from the interaction between responder teams and automated planning support and propose design solutions to them. \\
+This thesis contributes to the understanding of the potential socio-technical issues that can emerge from the interaction between responder teams and automated planning support, which in turn, leads to design implications for dealing with the emerged issues. \\
 
-(Problem) Recently, Frequent natural and man-made disasters in Haiti, Chile and Japan drew attention of Researchers. A lot efforts have been made to study the technologies that can assist human responders to improve their performance. In the disaster response domain,  a disaster response team, which contains several incident commanders and field agents, is faced with the problem of carrying out geographically distributed tasks under spatial and time constraints in a quickly changing task environment. \\ 
+Recently, frequent natural and man-made disasters in Haiti, Chile and Japan drew attention of Researchers. A lot of efforts have been made to study the technologies that can assist human responders to improve their performance. In the disaster response domain,  a disaster response team, which typically contains several incident commanders and field responders, is faced with the problem of carrying out geographically distributed tasks under spatial and time constraints in a quickly changing task environment. \\ 
 
-Effective planning and coordination can be a key factor for the success of disaster operation but it is difficult to achieve. Recent advance in the multi-agent technologies leads to the possibility of building agent software which supports Team coordination by automating the task planning process. However , it is unknown how the agent software can fit into the team organisation in a way that improve rather than hinders the team performance. The interaction between human operators and planning support systems need to be carefully designed before technology deployment.\\
+Effective planning and coordination can be a key factor for the success of disaster operation but it is difficult to achieve. Recent advance in the multi-agent technologies leads to the possibility of building agent software which supports team coordination by automating the task planning process. However , it is unknown how the agent software can fit into the team organisation in a way that improves rather than hinders the team performance. The interaction between human operators and planning support systems need to be studied so that we can generate appropriate interaction design for deploying the planning support technologies.\\
 
-(method) This work presents three field studies which investigates the impact of different interaction patterns between human teams and agent-based planning support. The studies adopt serious game approach which is arguably an established vehicle to vehicle to explore socio-technical issues in complex real world settings.\\
+This work presents three field studies which investigates the impact of different interaction patterns between human teams and automated  planning support. This PhD work adopts serious mixed reality game approach which is arguably an established vehicle to explore socio-technical issues in complex real world settings.\\
 
-We developed AtomicOrchid, an emergency response game to create a task setting which mirrors real aspects of disaster response operation. In the game trials, participants are recruited to play as field responders and incident commanders to carry out rescue missions. Participants' experiences are observed and recorded as they coordinate with each other to achieve game objectives, with the support from an intelligent planner software. Interaction analysis is carried out on the data, leading to descriptive results which unpacks interactional issues. By iteratively designing and examining different interaction patterns through three iterations of studies, we progressively explore requirements and social implications of planning support system for responder teams.\\
+We developed AtomicOrchid, an emergency response game to create a task setting which mirrors aspects of real world disaster response operation. In the game trials, participants are recruited to play as field responders and incident commanders to carry out rescue missions. Participants' experiences are observed and recorded as they coordinate with each other to achieve game objectives, with the support from an intelligent planner agent. Interaction analysis is carried out on the data, leading to descriptive results which unpacks interactional issues. By iteratively designing and examining different interaction patterns through three iterations of studies, we progressively explore requirements and design implications of planning support system for responder teams.\\
 
-In the 1st study,field responders and incident commander coordinate without support of the intelligent planner. The study establish baseline performance of the game play and derived several requirements for planning support system. In the 2ed study, an intelligent planner was introduced to guide to field responders directly. In the third study, the system is modified to support incident commanders mediating task planning activities for field responders and the planning agent. \\
+In the first study, field responders and incident commander coordinate without support of the intelligent planner. The study establishes baseline performance of the game play and derived a number requirements for interaction design of planning support system. In the second study, an intelligent planner was introduced to guide to field responders directly without involvement of incident commanders. In the third study, the system is modified to support incident commanders mediating task planning activities for field responders and the planning agent. \\
 
-Overall these studies unpacked how the division of labour between human and agent played with different interaction patterns. The field observations show that agent guidance have significant hidden social cost, which interrupts natural human work flow. Accountability is also a major issue when the agent get involved in the task planning. Also, confusions and misunderstandings are often observed in human agent interactions. The results of the studies highlight both detailed system requirements and high-level deign implications for tackling the observed socio-technical issues.\\  
+Overall these studies unpacked how the division of labour between human and agent played out with different interaction patterns. The field observations revealed that agent guidance have significant hidden social cost, which interrupts natural human work flow. Accountability is also a major issue when the agent get involved in the task planning. Further, confusions and misunderstandings are often observed in human agent interactions. The results of the studies highlight both detailed system requirements and high-level deign implications for tackling the observed socio-technical issues.\\  
 
 
 \endgroup			
