--- a/FrontBackmatter/Dedication.tex
+++ b/FrontBackmatter/Dedication.tex
@@ -9,14 +9,12 @@
 \vspace*{3cm}
 
 \begin{center}
-    \emph{-----} something. \\
-    Family means nobody gets left behind, or forgotten. \\ \medskip
-    --- Lilo \& Stitch    
+   To my xxx \\ \medskip
 \end{center}
 
-\medskip
+%\medskip
 
-\begin{center}
-    Dedicated to the loving memory of Rudolf Miede. \\ \smallskip
-    1939\,--\,2005
-\end{center}
+%\begin{center}
+    %Dedicated to the loving memory of Rudolf Miede. \\ \smallskip
+    %1939\,--\,2005
+%\end{center}
