--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -110,7 +110,7 @@
 \usepackage{mparhack} % get marginpar right
 \usepackage{fixltx2e} % fixes some LaTeX stuff 
 \usepackage{bibentry}
-
+\usepackage{multirow}
 
 \nobibliography*
 \PassOptionsToPackage{printonlyused,smaller}{acronym}
