--- a/FrontBackmatter/Bibliography.tex
+++ b/FrontBackmatter/Bibliography.tex
@@ -10,4 +10,4 @@
 \addcontentsline{toc}{chapter}{\tocEntry{\bibname}}
 \bibliographystyle{plainnat}
 \label{app:bibliography} 
-\bibliography{Bibliography,LR,Study1,Study2,Study3}
+\bibliography{Bibliography,Approach,LR,Study1,Study2,Study3}
