--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -40,7 +40,7 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{Investigating Interactional Issues of Agent Planning Support for Disaster Response \xspace}
+\newcommand{\myTitle}{Investigating Interactional Issues of Automated Planning Support for Disaster Response \xspace}
 \newcommand{\mySubtitle}{With a Mixed Reality Game Probe \xspace}
 \newcommand{\myDegree}{Doctoral\xspace}
 \newcommand{\myName}{Wenchao Jiang\xspace}
@@ -52,7 +52,7 @@
 \newcommand{\myUni}{Put data here\xspace}
 \newcommand{\myLocation}{Nottingham\xspace}
 \newcommand{\myTime}{August 2012\xspace}
-\newcommand{\myVersion}{version 0.1\xspace}
+\newcommand{\myVersion}{version 0.9\xspace}
 \newcommand\Mybox[1]{% for presenting episodes
   \setlength\fboxsep{0pt}\fcolorbox{white}{white}{#1}
 }
