--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -64,9 +64,14 @@
     \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
     \chapter*{Acronyms}
     \begin{acronym}[UML]
-        \acro{DRY}{Don't Repeat Yourself}
-        \acro{API}{Application Programming Interface}
-        \acro{UML}{Unified Modeling Language}
+        \acro{DR}{Disaster response}
+        \acro{CSCW}{Computer Supported Collaborative Work}
+        \acro{ICT}{Information and Communication Technologies}
+        \acro{HACS}{Human Agent Collective Systems}
+        \acro{USAR}{Urban Search And Rescue}
+        \acro{HCI}{Human Computer Interaction}
+        \acro{AO}{AtomicOrchid}
+        \acro{MAS}{Multi-Agent System}
     \end{acronym}                     
 \endgroup
 
