--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -89,7 +89,7 @@
 
 \include{Chapters/Chapter01}
 \cleardoublepage
-\ctparttext{You can put some informational part preamble text here. }
+%\ctparttext{You can put some informational part preamble text here. }
 \part{Background}
 \include{Chapters/LiteratureReview}
 \part{Methodology and Approach}
