last pass through

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -64,21 +64,25 @@
     \chapter*{Acronyms}
     \begin{acronym}[UML]
     		\acro{AI}{Artificial Intelligence}
-    		\acro{PSS}{Planning Support System}
-        \acro{DR}{Disaster response}
-        \acro{CSCW}{Computer Supported Collaborative Work}
+    		\acro{AO}{AtomicOrchid}
+    		\acro{BSG}{command and control model of Bronze-Sliver-Gold}
+    		\acro{CSCW}{Computer Supported Collaborative Work}
+    		\acro{C2}{Command and Control}
+    		\acro{DR}{Disaster response}
         \acro{ERR}{Emergence Response Room}
-        \acro{ICT}{Information and Communication Technologies}
-        \acro{HACS}{Human Agent Collective Systems}
-        \acro{USAR}{Urban Search And Rescue}
-        \acro{HCI}{Human Computer Interaction}
-        \acro{HAC-ER}{Human Agent Collectives for Emergency Response}
-        \acro{AO}{AtomicOrchid}
-        \acro{C2}{Command and Control}
         \acro{GIS}{Geospatial Information System}
+        \acro{HACS}{Human Agent Collective Systems}
+        \acro{HAC-ER}{Human Agent Collectives for Emergency Response}
+        \acro{HAI}{Human Agent Interaction}
+        \acro{HCI}{Human Computer Interaction}
+        \acro{ICT}{Information and Communication Technologies}
+        \acro{LoA}{Level of Automation}
         \acro{MAS}{Multi-Agent System}
         \acro{MRG}{Mixed Reality Game}
+        \acro{PSS}{Planning Support System}
+        \acro{RG}{Rescue Global}
         \acro{UAV}{Unmanned Aerial vehicle}
+        \acro{USAR}{Urban Search And Rescue} 
     \end{acronym}   
     \vspace*{8ex}                  
 \endgroup
