--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -70,6 +70,7 @@
     		\acro{C2}{Command and Control}
     		\acro{DR}{Disaster response}
         \acro{ERR}{Emergence Response Room}
+        \acro{EM}{Ethnomethodology}
         \acro{GIS}{Geospatial Information System}
         \acro{HACS}{Human Agent Collective Systems}
         \acro{HAC-ER}{Human Agent Collectives for Emergency Response}
