--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -91,9 +91,9 @@
 \cleardoublepage
 %\ctparttext{You can put some informational part preamble text here. }
 \part{Background}
-\include{Chapters/LiteratureReview}
+%\include{Chapters/LiteratureReview}
 \part{Methodology and Approach}
-\include{Chapters/ChapterM&P}
+%\include{Chapters/ChapterM&P}
 %\addtocontents{toc}{\protect\clearpage} % <--- just debug stuff, ignore
 \part{Studies}
 \include{Chapters/Chapter04}
