figures in Study 3

--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -19,9 +19,9 @@ This work presents three field studies which investigates the impact of differen
 
 We developed AtomicOrchid, an emergency response game to create a task setting which mirrors aspects of real world disaster response operation. In the game trials, participants are recruited to play as field responders and incident commanders to carry out rescue missions. Participants' experiences are observed and recorded as they coordinate with each other to achieve game objectives, with the support from an intelligent planner agent. Interaction analysis is carried out on the data, leading to descriptive results which identifies interactional issues. By iteratively designing and examining different interaction patterns through three iterations of studies, we progressively explore requirements and design implications of planning support system for responder teams.\\
 
-In the first study, field responders and incident commander coordinate without support of the intelligent planner. The study establishes baseline performance of the game play and derived a number requirements for interaction design of planning support system. In the second study, an intelligent planner was introduced to guide to field responders directly without involvement of incident commanders. In the third study, the system is modified to support incident commanders mediating task planning activities for field responders and the planning agent. \\
+In the first study, field responders and incident commander coordinate without support of the intelligent planner. The study establishes baseline performance of the game play and derived a number requirements for interaction design of planning support system. In the second study, an automated planner was introduced to guide to field responders directly without involvement of incident commanders. In the third study, the system is modified to support incident commanders mediating task planning activities for field responders and the planning agent. \\
 
-Overall these studies aided in identifying how the division of labour between human and agent played out with different interaction patterns. The field observations revealed that agent guidance have significant hidden social cost, which interrupts natural human work flow. Accountability is also a major issue when the agent get involved in the task planning. Further, confusions and misunderstandings are often observed in human agent interactions. The results of the studies highlight both detailed system requirements and high-level deign implications for tackling the observed socio-technical issues.\\  
+Overall, these studies generate three interactive prototypes of planning support system. The observations of field trials revealed how the organisational work is organised with and without automated planning support; How the guidance from the planner supports/interrupts natural human workflow; How the human mediation (between planner and responders) played out to support the teamworking for better or worse. The observations are further analysed to generate design implications around the themes of labour division, common ground, accountability, and support of situated actions.\\  
 
 
 \endgroup			
