--- a/Approach.bib
+++ b/Approach.bib
@@ -10,7 +10,7 @@ year = {2012}
 @article{Ackerman2000,
 author = {Ackerman, Mark},
 doi = {10.1207/S15327051HCI1523\_5},
-file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Ackerman - 2000 - The Intellectual Challenge of CSCW The Gap Between Social Requirements and Technical Feasibility.pdf:pdf},
+file = {:home/wenchao/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ackerman - 2000 - The Intellectual Challenge of CSCW The Gap Between Social Requirements and Technical Feasibility.pdf:pdf},
 issn = {0737-0024},
 journal = {Human-Computer Interaction},
 month = sep,
@@ -21,14 +21,31 @@ url = {http://www.informaworld.com/openurl?genre=article\&doi=10.1207/S15327051H
 volume = {15},
 year = {2000}
 }
-@misc{U.S.DepartmentofHomelandSecurity2008,
-author = {{U.S. Department of Homeland Security}},
-title = {{National Incident Management System}},
+@article{Avrahami,
+author = {Avrahami, Daniel and Hudson, Scott E},
+file = {:home/wenchao/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Avrahami, Hudson - Unknown - QnA Augmenting an Instant Messaging Client to Balance User Responsiveness and Performance.pdf:pdf},
+isbn = {1581138105},
+keywords = {im,instant messaging,interruptions,workflow},
+number = {3},
+pages = {515--518},
+title = {{QnA : Augmenting an Instant Messaging Client to Balance User Responsiveness and Performance}},
+volume = {6},
+year = {2003}
+}
+@article{Brundell,
+author = {Brundell, Patrick and Tennent, Paul and Greenhalgh, Chris and Knight, Dawn and Malley, Claire O and Ainsworth, Shaaron and Clarke, David and Adolphs, Svenja},
+file = {:home/wenchao/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brundell et al. - Unknown - Digital Replay system (DRS) A Tool for Interaction Analysis.pdf:pdf},
+title = {{Digital Replay system (DRS): A Tool for Interaction Analysis}},
 year = {2008}
 }
 @misc{RescueGlobal2012,
 author = {{Rescue Global}},
-file = {:Users/wxj/Downloads/Rescue\_Global\_an\_Introduction.pdf:pdf},
+file = {:home/wenchao/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Rescue Global - 2012 - An Introduction to Rescue Global.pdf:pdf},
 title = {{An Introduction to Rescue Global}},
 year = {2012}
+}
+@misc{U.S.DepartmentofHomelandSecurity2008,
+author = {{U.S. Department of Homeland Security}},
+title = {{National Incident Management System}},
+year = {2008}
 }
