--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -13,7 +13,7 @@ This thesis contributes to the understanding of the potential socio-technical is
 
 Recently, natural and man-made disasters in Haiti, Chile and Japan drew attention of researchers of disaster management systems. A lot of efforts have been made to study the technologies that can assist human responders to improve their performance. In the disaster response domain,  a disaster response team, which typically contains several incident commanders and field responders, are faced with the problem of carrying out geographically distributed tasks under spatial and time constraints in a quickly changing task environment. \\ 
 
-Effective planning and coordination can be a key factor for the success of disaster operation but it is difficult to achieve. Recent advances in the multi-agent technologies leads to the possibility of building agent software which supports team coordination by automating the task planning process. However , it is unknown how the agent-based software can fit into the team organisation in a way that improves rather than hinders the team performance. The interaction between human operators and planning support systems need to be studied so that we can generate appropriate interaction design for deploying the planning support technologies.\\
+Effective planning and coordination can be a key factor for the success of disaster operation but it is difficult to achieve. Recent advances in the multi-agent technologies leads to the possibility of building planning support for team coordination by automating the task planning process. However , it is unknown how the planning support system that can fit into the team organisation in a way that improves rather than hinders the team performance. The interaction between human operators and planning support systems need to be studied so that we can generate appropriate interaction design for deploying the planning support technologies.\\
 
 This work presents three field studies which investigates the impact of different interaction patterns between human teams and automated  planning support. This PhD work adopts serious mixed reality game approach which is arguably an established vehicle to explore socio-technical issues in complex real world settings.\\
 
@@ -21,7 +21,7 @@ We developed AtomicOrchid, an emergency response game to create a task setting w
 
 In the first study, field responders and incident commander coordinate without support of the intelligent planner. The study establishes baseline performance of the game play and derived a number requirements for interaction design of planning support system. In the second study, an automated planner was introduced to guide to field responders directly without involvement of incident commanders. In the third study, the system is modified to support incident commanders mediating task planning activities for field responders and the planning agent. \\
 
-Overall, these studies generate three interactive prototypes of planning support system. The observations of field trials revealed how the organisational work is organised with and without automated planning support; How the guidance from the planner supports/interrupts natural human workflow; How the human mediation (between planner and responders) played out to support the teamworking for better or worse. The observations are further analysed to generate design implications around the themes of labour division, common ground, accountability, and support of situated actions.\\  
+Overall, these studies generate three interactive prototypes of planning support system. The observations on field trials revealed how the organisational work is organised with and without automated planning support; How the guidance from the planner supports/interrupts natural human workflow; How the human mediation (between planner and responders) played out to support the teamworking for better or worse. The observations are further analysed to generate design implications around the themes of labour division, common ground, accountability, and support of situated actions.\\  
 
 
 \endgroup			
