--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -21,13 +21,16 @@
 
         %\includegraphics[width=6cm]{gfx/TFZsuperellipse_bw} \\ \medskip
 
-        \mySubtitle \\ \medskip   
+        %\mySubtitle \\ \medskip   
         %\myDegree \\
         %\myDepartment \\                            
         %\myFaculty \\
         %\myUni \\ \bigskip
+        Thesis submitted to the University of Nottingham
+ for the degree of Doctor of Philosophy \medskip   
 
-        \myTime\ -- \myVersion
+
+        \myTime\ %\myVersion
 
         \vfill                      
 
