--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -43,7 +43,7 @@
 \newcommand{\myTitle}{Investigating Interactional Issues of Automated Planning Support for Disaster Response \xspace}
 \newcommand{\mySubtitle}{With a Mixed Reality Game Probe \xspace}
 \newcommand{\myDegree}{Doctoral\xspace}
-\newcommand{\myName}{Wenchao Jiang\xspace}
+\newcommand{\myName}{Wenchao Jiang. BSc\xspace}
 \newcommand{\myProf}{Put name here\xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
 \newcommand{\mySupervisor}{Put name here\xspace}
