--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -65,10 +65,10 @@
     \begin{acronym}[UML]
     		\acro{AI}{Artificial Intelligence}
     		\acro{AO}{AtomicOrchid}
-    		\acro{BSG}{command and control model of Bronze-Sliver-Gold}
+    		\acro{BSG}{Command and control model of Bronze-Sliver-Gold}
     		\acro{CSCW}{Computer Supported Collaborative Work}
     		\acro{C2}{Command and Control}
-    		\acro{DR}{Disaster response}
+    		\acro{DR}{Disaster Response}
         \acro{ERR}{Emergency Response Rooms}
         \acro{EM}{Ethnomethodology}
         \acro{GIS}{Geospatial Information System}
