--- a/Approach.bib
+++ b/Approach.bib
@@ -10,7 +10,7 @@ year = {2012}
 @article{Ackerman2000,
 author = {Ackerman, Mark},
 doi = {10.1207/S15327051HCI1523\_5},
-file = {:home/wenchao/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ackerman - 2000 - The Intellectual Challenge of CSCW The Gap Between Social Requirements and Technical Feasibility.pdf:pdf},
+file = {:Users/wenchao/Library/Application Support/Mendeley Desktop/Downloaded/Ackerman - 2000 - The Intellectual Challenge of CSCW The Gap Between Social Requirements and Technical Feasibility.pdf:pdf},
 issn = {0737-0024},
 journal = {Human-Computer Interaction},
 month = sep,
@@ -21,27 +21,33 @@ url = {http://www.informaworld.com/openurl?genre=article\&doi=10.1207/S15327051H
 volume = {15},
 year = {2000}
 }
-@article{Avrahami,
+@inproceedings{Avrahami,
+abstract = {The growing use of Instant Messaging for social and work-related communication has created a situation where incoming messages often become a distraction to users while they are performing important tasks. Staying on task at the expense of responsiveness to IM buddies may portray the users as impolite or even rude. Constantly attending to IM, on the other hand, may prevent users from performing tasks efficiently, leaving them frustrated. In this paper we present a tool that augments a commercial IM client by automatically increasing the salience of incoming messages that may deserve immediate attention, helping users decide whether or not to stay on task. Copyright 2004 ACM.},
 author = {Avrahami, Daniel and Hudson, Scott E},
-file = {:home/wenchao/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Avrahami, Hudson - Unknown - QnA Augmenting an Instant Messaging Client to Balance User Responsiveness and Performance.pdf:pdf},
-isbn = {1581138105},
-keywords = {im,instant messaging,interruptions,workflow},
+booktitle = {Proceedings of the ACM Conference on Computer Supported Cooperative Work, CSCW},
+doi = {http://doi.acm.org/10.1145/1031607.1031692},
+file = {:Users/wenchao/Library/Application Support/Mendeley Desktop/Downloaded/Avrahami, Hudson - Unknown - QnA Augmenting an Instant Messaging Client to Balance User Responsiveness and Performance.pdf:pdf},
+isbn = {1-58113-810-5},
+keywords = {Communication systems,Computer operating systems,Computer supported cooperative work,Flow control,Human computer interaction,IM,Instant Messaging,Instant messaging (IM),Interruptions,User interfaces,User responsiveness,Vectors,Workflow},
 number = {3},
 pages = {515--518},
-title = {{QnA : Augmenting an Instant Messaging Client to Balance User Responsiveness and Performance}},
+title = {{QnA: Augmenting an instant messaging client to balance user responsiveness and performance}},
+url = {http://www.scopus.com/inward/record.url?eid=2-s2.0-21644479235\&partnerID=40\&md5=2429b9f016ef47a9357051c6e263bc6e},
 volume = {6},
-year = {2003}
+year = {2004}
 }
-@article{Brundell,
-author = {Brundell, Patrick and Tennent, Paul and Greenhalgh, Chris and Knight, Dawn and Malley, Claire O and Ainsworth, Shaaron and Clarke, David and Adolphs, Svenja},
-file = {:home/wenchao/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brundell et al. - Unknown - Digital Replay system (DRS) A Tool for Interaction Analysis.pdf:pdf},
-title = {{Digital Replay system (DRS): A Tool for Interaction Analysis}},
+@inproceedings{Brundell,
+author = {Brundell, Patrick and Tennent, Paul and Greenhalgh, Chris and Knight, Dawn and Crabtree, Andy and O'Malley, Claire and Ainsworth, Shaaron and Clarke, David and Carter, Ronald and Adolphs, Svenja},
+booktitle = {International Conference on Learning Sciences Workshop on Interaction Analysis},
+file = {:Users/wenchao/Library/Application Support/Mendeley Desktop/Downloaded/Brundell et al. - Unknown - Digital Replay system (DRS) A Tool for Interaction Analysis.pdf:pdf},
+title = {{Digital Replay System (DRS): A Tool for Interaction Analysis}},
 year = {2008}
 }
 @misc{RescueGlobal2012,
 author = {{Rescue Global}},
-file = {:home/wenchao/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Rescue Global - 2012 - An Introduction to Rescue Global.pdf:pdf},
+file = {:Users/wenchao/Library/Application Support/Mendeley Desktop/Downloaded/Rescue Global - 2012 - An Introduction to Rescue Global.pdf:pdf},
 title = {{An Introduction to Rescue Global}},
+url = {http://www.rescueglobal.org/images/uploads/Rescue\_Global\_an\_Introduction.pdf},
 year = {2012}
 }
 @misc{U.S.DepartmentofHomelandSecurity2008,
