--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -12,7 +12,7 @@
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
 
-\emph{To my parents, wife, friends} 
+\emph{To be added!!!} 
 
 
 \endgroup
