--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -12,7 +12,9 @@
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
 
-\emph{To be added!!!} 
+\emph{Firstly, I would like to express my sincere gratitude to my supervisors Prof. Tom Rodden, Prof. Chris Greenhalgh and Dr. Joel Fischer for the continuous support of my Ph.D study and related research, for their patience, motivation, and immense knowledge. Their guidance helped me in all the time of research and writing of this thesis.}\\
+
+\emph{I would like to thank my family: my wife Jia Fu, and my parents for supporting me spiritually throughout writing this thesis and my life in general.}\\
 
 
 \endgroup
