--- a/LR.bib
+++ b/LR.bib
@@ -1332,3 +1332,18 @@ publisher = {ACM},
 title = {{Vio: a mixed-initiative approach to learning and automating procedural update tasks}},
 year = {2007}
 }
+@article{Hayes-Roth1979,
+abstract = {This paper presents a cognitive model of the planning process. The model generalizes the theoretical architecture of the Hearsay-II system. Thus, it assumes that planning comprises the activities of a variety of cognitive "specialists." Each specialist can suggest certain kinds of decisions for incorporation into the plan in progress, These include decisions about: (a) how to approach the planning problem; (b) what knowledge bears on the problem; (c) what kinds of actions to try to plan; (d) what specific actions to plan; and (e) how to allocate cognitive resources during planning, Within each of these categories, different specialists suggest decisions at different levels of abstraction. The activities of the various specialists are not coordinated in any systematic way. Instead, the specialists operate opportunistically, suggesting decisions whenever promising opportunities arise. The paper presents a detailed account of the model and illustrates its assumptions with a "thinking aloud" protocol. It also describes the performance of a computer simulation of the model. The paper contrasts the proposed model with successive refinement models and attempts to resolve apparent differences between the two points of view.},
+author = {Hayes-Roth, Barbara and Hayes-Roth, Frederick},
+doi = {10.1207/s15516709cog0304\_1},
+file = {:Users/wenchao/Desktop/1-s2.0-S0364021379800105-main.pdf:pdf},
+isbn = {0364021315516709},
+issn = {03640213},
+journal = {Cognitive Science},
+number = {157},
+pages = {275--310},
+pmid = {12186352},
+title = {{A cognitive model of planning}},
+volume = {3},
+year = {1979}
+}
