--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -11,11 +11,11 @@
 \chapter*{Abstract}
 This thesis contributes to the understanding of the potential socio-technical issues that can emerge from the interaction between responder teams and automated planning support, which in turn, leads to design implications for dealing with the emerged issues. \\
 
-Recently, natural and man-made disasters in Haiti, Chile and Japan drew attention of researchers of disaster management systems. A lot of efforts have been made to study the technologies that can assist human responders to improve their performance. In the Disaster Response domain,  a Disaster Response team, which typically contains several incident commanders and field responders, are faced with the problem of carrying out geographically distributed tasks under spatial and time constraints in a quickly changing task environment. Recent advances in the multi-agent technologies leads to the possibility of building planning support for team coordination by automating the task planning process. However, it is unknown how the planning support system that can fit into the team organisation in a way that improves rather than hinders the team performance.\\
+Recently, natural and man-made disasters in Haiti, Chile and Japan drew the attention of researchers of disaster management systems. A lot of efforts have been made to study the technologies that can assist human responders to improve their performance. In the Disaster Response domain,  a Disaster Response team, which typically contains several incident commanders and field responders, are faced with the problem of carrying out geographically distributed tasks under spatial and temporal constraints in a quickly changing task environment. Recent advances in multi-agent technologies lead to the possibility of building planning support for team coordination by automating the task planning process. However, it is unknown how the planning support system can fit into the team organisation in a way that improves rather than hinders the team performance.\\
 
-This PhD work adopts serious mixed reality game approach as the vehicle to explore socio-technical issues in complex real world settings. We developed AtomicOrchid, an emergency response game to create a task setting which mirrors aspects of real world Disaster Response operation. In the game trials, participants are recruited to play as field responders and incident commanders to carry out rescue missions. Participants' experiences are observed and recorded as they coordinate with each other to achieve game objectives, with the support from an intelligent planner agent. The observations on three AtomicOrchid field trials revealed how the organisational work is organised with and without automated planning support; How the guidance from the planner supports/interrupts natural human workflow; How the human mediation (between planner and responders) played out to support the teamworking for better or worse. \\
+This PhD work adopts a serious mixed reality game approach as the vehicle to explore socio-technical issues in complex real world settings. We developed AtomicOrchid, an emergency response game to create a task setting which mirrors aspects of real world Disaster Response operation. In the game trials, participants are recruited to play as field responders and incident commanders to carry out rescue missions. Participants' experiences are observed and recorded as they coordinate with each other to achieve game objectives, with the support from an intelligent planner agent. The observations gathered in three AtomicOrchid field trials reveal how the organisational work is organised with and without automated planning support; how the guidance from the planner supports/interrupts natural human workflow; how the human mediation (between planner and responders) played out to support the team work for better or worse. \\
 
-In the first study, field responders and Headquarters coordinate without support of the intelligent planner. The result showed the team planning is dominated by local coordination between field players with in a ``situated'' manner. The HQ is observed to successfully provide situational awareness to the field teams through remote messages. However, HQ have little direct influences on the planning and actions of field teams. In the second study, an automated planner was introduced to guide to field responders directly without involvement of incident commanders. Agent is observed to take over routine planning activities while the human focus on other issues such as finding teammates, targets and choosing the best routes. However, there are also evidence showing the agent planning occasionally interrupts workflow of human team potentially because it fails to consider social cost of task changes. In the third study, the system is modified to support incident commanders mediating task planning activities for field responders and the planning agent. We find that the human coordinator and automated planner agent can successfully work together in most cases, with human coordinators inspecting and `correcting' the agent-proposed plans. However, occasional failures of planning are also observed due to: complacency; silent, missing or invisible information; and limited support for human planning. \\
+In the first study, field responders and Headquarters (HQ) coordinate without support of the intelligent planner. The result showed the team planning is dominated by local coordination between field players with in a ``situated'' manner. The HQ is observed to successfully provide situational awareness to the field teams through remote messages. However, the HQ has little direct influence on the planning and actions of field teams. In the second study, an automated planner was introduced to guide field responders directly without involvement of incident commanders. At its best, the agent is observed to take over routine planning activities while the human focus on other issues such as finding teammates, targets and choosing the best routes. However, there  also evidence showing the agent planning occasionally interrupts the  workflow of the human team potentially because it fails to consider the social cost of task changes. In the third study, the system is modified to support incident commanders mediating task planning activities for field responders and the planning agent. We find that the human coordinator and automated planner agent can successfully work together in most cases, with human coordinators inspecting and `correcting' the agent-proposed plans. However, occasional failures of planning are also observed due to: complacency; silent, missing or invisible information; and limited support for human planning. \\
 
 The observations of the three studies are further analysed to generate design implications around the themes of balancing labour division, achieving common ground, facilitating accountability, and supporting situated actions.\\  
 
